<resources>
    <string name="app_name">카나리아</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">사용자 이름</string>
    <string name="nav_header_subtitle">사용자 나이 + 사용자 거주지</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">설정</string>
    <string name="action_explanation">안내</string>

    <string name="cancel">취소</string>
    <string name="confirm">확인</string>

    <string name="menu_home">Home 홈</string>
    <string name="menu_map">Map 지도보기</string>
    <string name="menu_data">Data 데이타보기</string>
    <string name="menu_graph">Graph 그래프보기</string>
    <string name="menu_webview">Webview 웹뷰보기</string>
    <string name="menu_report">Report 제보하기</string>
    <string name="home_second">Home Second</string>
    <string name="request_updates">Request updates</string>
    <string name="remove_updates">Remove updates</string>
    <string name="unknown_location">Unknown location</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="user_header">사용자 설정</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="activity_in_vehicle">In Vehicle</string>
    <string name="activity_on_bicycle">On Bicycle</string>
    <string name="activity_on_foot">On Foot</string>
    <string name="activity_running">Running</string>
    <string name="activity_still">Still</string>
    <string name="activity_tilting">Tilting</string>
    <string name="activity_walking">walking</string>
    <string name="activity_unknown">Unknown</string>
</resources>
