<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_data"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_data" />
        <item
            android:id="@+id/nav_graph"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="Graph 그래프보기" />
    </group>
</menu>
